[package]
name = "rss_reader"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
reqwest = "0.12.22"
rss = "2.0.12"
sqlx = { version = "0.8.6", features = [ "sqlite", "runtime-tokio", "tls-native-tls" ] }
tokio = { version = "1.46.1", features = ["full"] }
